게임오버의 경우와 라인클리어의 경우의 함수를 만들고 Tic의 개념을 추가 하였다.

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,13 +1,1 @@
-/Block.class
-/BlockAxis.class
-/BlockAxisDefinition.class
-/Control.class
-/CreateBlock.class
-/Map.class
-/MoveType.class
-/Point.class
-/Space.class
-/SpaceBlockView.class
-/Tetrino.class
-/TetrinoType.class
-/TetrisControlManager.class
+/SpaceSize.class
