--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 	</build>
 	<dependencies>
 		<dependency>
+			<groupId>javazoom</groupId>
+			<artifactId>jlayer</artifactId>
+			<version>1.0.1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.8.1</version>
